[gd_scene load_steps=25 format=2]

[ext_resource path="res://ui/settings/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/main_menu.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 16, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 40, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 64, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 16, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 40, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 64, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 16, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 40, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 64, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 16, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 40, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 64, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 16, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 40, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 64, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CloseButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "hide"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 0.9, 0.9 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CloseButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "show"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CloseButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="SettingsMenu" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 160, 90 )
theme = ExtResource( 4 )
color = Color( 0, 0, 0, 0.470588 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 160, 90 )

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
margin_left = 96.0
margin_top = 26.0
margin_right = 224.0
margin_bottom = 154.0
rect_min_size = Vector2( 128, 128 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 126.0
margin_bottom = 126.0
custom_constants/margin_right = 6
custom_constants/margin_top = 12
custom_constants/margin_left = 6
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
margin_left = 6.0
margin_top = 12.0
margin_right = 118.0
margin_bottom = 122.0
custom_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 12.0

[node name="BgmButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
toggle_mode = true
texture_normal = SubResource( 21 )
texture_pressed = SubResource( 16 )
texture_hover = SubResource( 15 )
expand = true
stretch_mode = 3

[node name="BgmSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 110.0
margin_bottom = 12.0
rect_min_size = Vector2( 72, 0 )
size_flags_horizontal = 6
step = 5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 112.0
margin_bottom = 36.0

[node name="SfxButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 32.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
toggle_mode = true
texture_normal = SubResource( 17 )
texture_pressed = SubResource( 18 )
texture_hover = SubResource( 20 )
expand = true
stretch_mode = 3

[node name="SfxSlider" type="HSlider" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 38.0
margin_right = 110.0
margin_bottom = 12.0
rect_min_size = Vector2( 72, 0 )
size_flags_horizontal = 6
step = 5.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 60.0
alignment = 1

[node name="FullscreenButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 30.0
margin_right = 54.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 12 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = SubResource( 26 )
texture_pressed = SubResource( 27 )
texture_hover = SubResource( 28 )
expand = true
stretch_mode = 3

[node name="WindowedButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 82.0
margin_bottom = 12.0
rect_min_size = Vector2( 24, 12 )
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = SubResource( 35 )
texture_pressed = SubResource( 30 )
texture_hover = SubResource( 31 )
expand = true
stretch_mode = 3

[node name="Control" type="Control" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 112.0
margin_bottom = 110.0

[node name="ExitButton" type="TextureButton" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Buttons"]
margin_right = 24.0
margin_bottom = 24.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 32 )
texture_pressed = SubResource( 33 )
texture_hover = SubResource( 34 )

[node name="Control" type="Control" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Buttons"]
margin_left = 28.0
margin_right = 112.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CloseButton" type="TextureButton" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.0
margin_top = -64.0
margin_right = 82.0
margin_bottom = -48.0
mouse_default_cursor_shape = 2
texture_normal = SubResource( 22 )
texture_pressed = SubResource( 23 )
texture_hover = SubResource( 24 )
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 10 )
anims/hide = SubResource( 11 )
anims/show = SubResource( 9 )

[connection signal="mouse_entered" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/BgmButton" to="." method="_on_BgmButton_mouse_entered"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/BgmButton" to="." method="_on_BgmButton_toggled"]
[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/BgmSlider" to="." method="_on_BgmSlider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/SfxButton" to="." method="_on_SfxButton_mouse_entered"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/SfxButton" to="." method="_on_SfxButton_toggled"]
[connection signal="value_changed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer2/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="mouse_entered" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/FullscreenButton" to="." method="_on_FullscreenButton_mouse_entered"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="mouse_entered" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/WindowedButton" to="." method="_on_WindowedButton_mouse_entered"]
[connection signal="toggled" from="CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer3/WindowedButton" to="." method="_on_WindowedButton_toggled"]
[connection signal="mouse_entered" from="CenterContainer/Panel/MarginContainer/VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="CenterContainer/Panel/MarginContainer/VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="mouse_entered" from="CloseButton" to="." method="_on_CloseButton_mouse_entered"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
